--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # 默认忽略的文件
 /shelf/
 /workspace.xml
-.idea/
+./.idea/
+./build/
 # 基于编辑器的 HTTP 客户端请求
 /httpRequests/
 # Datasource local storage ignored files
