--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # 默认忽略的文件
 /shelf/
 /workspace.xml
-./.idea/
-./build/
 # 基于编辑器的 HTTP 客户端请求
 /httpRequests/
 # Datasource local storage ignored files
@@ -10,3 +8,8 @@
 /dataSources.local.xml
 cmake-build-debug/
 cmake-build-release/
+
+# 忽略IDE的配置文件
+.idea/
+.vscode/
+build/
