--- a/sample/Resources/Info.plist
+++ b/sample/Resources/Info.plist
@@ -4,15 +4,15 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>ChatBot</string>
+	<string>ChatGPT</string>
 	<key>CFBundleExecutable</key>
-	<string>ChatBot</string>
+	<string>ChatGPT</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.gezhi.chatbot</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>ChatBot</string>
+	<string>ChatGPT</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -22,7 +22,7 @@
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleGetInfoString</key>
-	<string>ChatBot</string>
+	<string>ChatGPT</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh</string>
 </dict>
