--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
-cmake-build-debug/
-cmake-build-release/
+cmake-build*/
 
 # 忽略IDE的配置文件
 .idea/
