```feat(application): 集成GPT-SoVITS并更新UI样式
- 集成GPT-SoVITS功能，优化语音处理模块。
- 更新UI样式，提升用户交互体验。- 调整窗口标志以提高窗口管理的灵活性。
-重构VITS配置，简化模型和角色的选择。
- 修正对话框样式不一致问题。
-确保日志错误信息的准确性。
```

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "sample/Vendor/spdlog"]
 	path = sample/Vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Vendor/libarchive"]
+	path = sample/Vendor/libarchive
+	url = https://github.com/libarchive/libarchive
+[submodule "sample/Vendor/libarchive"]
+	path = sample/Vendor/libarchive
+	url = https://github.com/libarchive/libarchive
