--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -4,23 +4,23 @@ project(CyberGirl)
 
 set(CMAKE_CXX_STANDARD 20)
 add_definitions(-w)
-
+add_subdirectory(Vendor/libarchive)
 # 添加依赖库
 find_package(sndfile REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(cpr CONFIG REQUIRED)
-find_package(OpenSSL REQUIRED)
 find_package(PortAudio CONFIG REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(imgui CONFIG REQUIRED)
+find_package(glfw3 CONFIG REQUIRED)
 find_package(yaml-cpp CONFIG REQUIRED)
-find_package(LibArchive REQUIRED)
 find_package(sol2 REQUIRED)
 find_package(Lua REQUIRED)
 find_package(Stb REQUIRED)
 find_package(SDL2 CONFIG REQUIRED)
 find_package(SDL2_image CONFIG REQUIRED)
 find_package(glad REQUIRED)
+find_package(OpenSSL REQUIRED)
 # 添加源文件
 file(GLOB SOURCES
         ../src/*.c*
@@ -32,9 +32,9 @@ file(GLOB HEADERS
         *.h*
         ../include/*.h*
 )
-
+# 使用OpenSSL而非Window的SSL
+add_definitions(-DNOCRYPT)
 # 添加可执行文件
-
 add_executable(CyberGirl ${SOURCES} ${HEADERS})
 target_precompile_headers(CyberGirl PRIVATE ../include/pch.h)
 # 添加头文件目录
@@ -44,16 +44,16 @@ target_link_libraries(CyberGirl
         PRIVATE portaudio
         PRIVATE ${SNDFILE_LIBRARIES}
         PRIVATE OpenGL::GL
-        PRIVATE LibArchive::LibArchive
-        PRIVATE yaml-cpp
+        PRIVATE archive
+        PRIVATE yaml-cpp::yaml-cpp
         PRIVATE nlohmann_json::nlohmann_json
         PRIVATE imgui::imgui
         PRIVATE glad::glad
         PRIVATE cpr::cpr
-        PRIVATE OpenSSL::SSL OpenSSL::Crypto
         PRIVATE ${Stb_INCLUDE_DIR}
         PRIVATE ${LUA_LIBRARIES} sol2
-        PRIVATE
+        PRIVATE OpenSSL::SSL OpenSSL::Crypto
+        PRIVATE glfw
         $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
         $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
         PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
@@ -65,7 +65,7 @@ target_sources(CyberGirl PRIVATE
         Resources/icon.png)
 
 if (MSVC)
-    target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "/bigobj")
+    target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "/bigobj" "/utf-8")
 endif ()
 
 # 指定资源文件输出目录
