feat(sample): 添加本地模型推理支持并优化应用
- 新增本地模型推理功能，支持使用DeepSeek等模型进行对话生成
-重构应用界面，增加下载管理器和加载动画
- 优化聊天记录显示逻辑，支持多线程加载
- 更新配置界面，增加本地模型设置选项
- 修复了一些已知问题，提升应用稳定性

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -3,12 +3,21 @@ cmake_minimum_required(VERSION 3.18)
 project(CyberGirl)
 
 set(CMAKE_CXX_STANDARD 20)
-add_definitions(-w)
+set(GGML_VULKAN 1 CACHE BOOL "Enable VK support in GGML")
+
+# 不要全局添加 -w 选项，MSVC 下请使用相应的编译选项关闭警告
+# add_definitions(-w)
+
 add_subdirectory(Vendor/libarchive)
+add_subdirectory(Vendor/llama.cpp)
+add_subdirectory(Vendor/llava)
+
 # 添加依赖库
 find_package(sndfile REQUIRED)
+find_package(Vulkan REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(cpr CONFIG REQUIRED)
+find_package(CURL REQUIRED)
 find_package(PortAudio CONFIG REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(imgui CONFIG REQUIRED)
@@ -21,6 +30,7 @@ find_package(SDL2 CONFIG REQUIRED)
 find_package(SDL2_image CONFIG REQUIRED)
 find_package(glad REQUIRED)
 find_package(OpenSSL REQUIRED)
+
 file(GLOB SOURCES
         ../src/*.c*
         *.c*
@@ -30,10 +40,29 @@ file(GLOB HEADERS
         *.h*
         ../include/*.h*
 )
+
 add_definitions(-DNOCRYPT)
+
 add_executable(CyberGirl ${SOURCES} ${HEADERS})
-target_include_directories(CyberGirl PRIVATE ../include Vendor/spdlog/include PRIVATE ${LUA_INCLUDE_DIR})
+target_include_directories(CyberGirl PRIVATE
+        ../include
+        Vendor/spdlog/include
+        Vendor/llava
+        ${Stb_INCLUDE_DIR}
+        PRIVATE ${LUA_INCLUDE_DIR}
+)
+
+# 对于 llama 静态库部分
+set_target_properties(llama ggml ggml-base llava PROPERTIES
+        CXX_STANDARD 17
+        CXX_STANDARD_REQUIRED YES
+        CXX_EXTENSIONS OFF
+        GGML_VULKAN ON
+)
+
 target_link_libraries(CyberGirl
+        PRIVATE ggml
+        PRIVATE llama llava
         PRIVATE portaudio
         PRIVATE ${SNDFILE_LIBRARIES}
         PRIVATE OpenGL::GL
@@ -43,32 +72,36 @@ target_link_libraries(CyberGirl
         PRIVATE imgui::imgui
         PRIVATE glad::glad
         PRIVATE cpr::cpr
-        PRIVATE ${Stb_INCLUDE_DIR}
         PRIVATE ${LUA_LIBRARIES} sol2
         PRIVATE OpenSSL::SSL OpenSSL::Crypto
+        PRIVATE Vulkan::Vulkan
+        PRIVATE CURL::libcurl
         PRIVATE glfw
         $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
         $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
-        PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
+        PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>
+)
 
 # 添加资源文件
 target_sources(CyberGirl PRIVATE
         Resources/Info.rc
         Resources/Info.plist
-        Resources/icon.png)
+        Resources/icon.png
+)
 
+# 针对 MSVC 针对性配置编译选项，关闭警告（/W0）并指定 UTF-8 以及大对象支持
 if (MSVC)
-    target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "/bigobj" "/utf-8")
+    target_compile_options(CyberGirl PRIVATE "/W0" "/bigobj" "/utf-8")
 endif ()
 
-
-# 将Resources目录下的所有文件和子目录匹配并添加到资源变量中
+# 将 Resources 目录下的所有文件和子目录匹配并添加到资源变量中
 file(GLOB_RECURSE RESOURCES "Resources/*")
 
 # 为目标添加资源文件
 set_target_properties(CyberGirl PROPERTIES
         RESOURCE "${RESOURCES}"
 )
+
 # 指定资源文件输出目录
 set_target_properties(CyberGirl PROPERTIES
         VS_RESOURCE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/Resources"
