feat(chat): 添加CUDA后端

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 
 project(CyberGirl)
-
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -allow-unsupported-compiler")
 set(CMAKE_CXX_STANDARD 20)
 
 # 设置输出目录，将所有文件放在编译目录的Chatbot文件夹下
@@ -24,7 +24,46 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${OUTPUT_DIR}")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${OUTPUT_DIR}/Bin")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${OUTPUT_DIR}/Lib")
 
-# 添加子目录
+# GPU 加速优先级配置 (CUDA12 > CUDA11 > Vulkan > CPU)
+# 更新为使用新的选项名称
+option(GGML_CUDA_USE_CUBLASLT "使用 cuBLASLt (需要 CUDA 12+)" ON)
+option(GGML_CUDA_FORCE_MMQ "强制使用 CUDA MMQ (如可用)" ON)
+
+# 检测 CUDA 并设置优先级
+include(CheckLanguage)
+check_language(CUDA)
+if(CMAKE_CUDA_COMPILER)
+    # 启用 CUDA 语言支持
+    enable_language(CUDA)
+
+    # 检测 CUDA 版本
+    if(CMAKE_CUDA_COMPILER_VERSION VERSION_GREATER_EQUAL 12.0)
+        # CUDA 12+
+        message(STATUS "【GPU加速】检测到 CUDA 12+ (${CMAKE_CUDA_COMPILER_VERSION})，将优先使用")
+        set(GGML_CUDA ON CACHE BOOL "启用 CUDA 支持" FORCE)  # 使用新的选项名称
+        set(GGML_CUDA_MMQ_SUPPORT ON CACHE BOOL "启用 CUDA MMQ 支持" FORCE)
+    elseif(CMAKE_CUDA_COMPILER_VERSION VERSION_GREATER_EQUAL 11.0)
+        # CUDA 11+
+        message(STATUS "【GPU加速】检测到 CUDA 11+ (${CMAKE_CUDA_COMPILER_VERSION})，将使用")
+        set(GGML_CUDA ON CACHE BOOL "启用 CUDA 支持" FORCE)  # 使用新的选项名称
+        set(GGML_CUDA_MMQ_SUPPORT ON CACHE BOOL "启用 CUDA MMQ 支持" FORCE)
+    else()
+        message(WARNING "【GPU加速】检测到较旧的 CUDA 版本 (${CMAKE_CUDA_COMPILER_VERSION})，性能可能不佳")
+        set(GGML_CUDA ON CACHE BOOL "启用 CUDA 支持" FORCE)  # 使用新的选项名称
+    endif()
+else()
+    # 如果没有 CUDA，检查是否可以使用 Vulkan
+    find_package(Vulkan QUIET)
+    if(Vulkan_FOUND)
+        message(STATUS "【GPU加速】未检测到 CUDA，将使用 Vulkan 加速")
+        set(GGML_VULKAN ON CACHE BOOL "启用 Vulkan 支持" FORCE)
+        set(GGML_VULKAN_CHECK_RESULT ON CACHE BOOL "启用 Vulkan 结果检查" FORCE)
+    else()
+        message(STATUS "【GPU加速】未检测到 GPU 加速选项，将使用 CPU 模式")
+    endif()
+endif()
+
+# 添加子目录（确保在设置完 GPU 选项之后）
 add_subdirectory(Vendor/libarchive)
 add_subdirectory(Vendor/llama.cpp)
 add_subdirectory(Vendor/spdlog)
@@ -32,7 +71,6 @@ add_subdirectory(Vendor)
 
 # 依赖库查找
 find_package(sndfile REQUIRED)
-find_package(Vulkan REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(cpr CONFIG REQUIRED)
 find_package(CURL REQUIRED)
@@ -40,8 +78,6 @@ find_package(PortAudio CONFIG REQUIRED)
 find_package(yaml-cpp CONFIG REQUIRED)
 find_package(sol2 REQUIRED)
 find_package(Lua REQUIRED)
-find_package(SDL2 CONFIG REQUIRED)
-find_package(SDL2_image CONFIG REQUIRED)
 find_package(OpenSSL REQUIRED)
 
 file(GLOB SOURCES
@@ -57,27 +93,36 @@ file(GLOB HEADERS
 add_definitions(-DNOCRYPT)
 
 add_executable(CyberGirl ${SOURCES} ${HEADERS})
-include_directories(${Vulkan_INCLUDE_DIRS})
 target_include_directories(CyberGirl PRIVATE
         ../include
         Vendor/llava
         PRIVATE ${LUA_INCLUDE_DIR}
 )
 
-# 对于 llama 静态库部分
+# 对于 llama 静态库部分 - 保留原有设置，但不再覆盖 GPU 设置
 set_target_properties(llama ggml ggml-base PROPERTIES
         CXX_STANDARD 17
         CXX_STANDARD_REQUIRED YES
         CXX_EXTENSIONS OFF
-        GGML_VULKAN ON
         # 确保这些库也输出到正确位置
         ARCHIVE_OUTPUT_DIRECTORY "${OUTPUT_DIR}/Lib"
         LIBRARY_OUTPUT_DIRECTORY "${OUTPUT_DIR}/Bin"
         RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_DIR}"
 )
 
+# 向主程序添加定义，以便程序知道使用何种后端
+if(GGML_CUDA)  # 更新为使用新的选项名称
+    target_compile_definitions(CyberGirl PRIVATE HAVE_CUDA=1)
+    if(CMAKE_CUDA_COMPILER_VERSION VERSION_GREATER_EQUAL 12.0)
+        target_compile_definitions(CyberGirl PRIVATE HAVE_CUDA12=1)
+    endif()
+elseif(GGML_VULKAN)
+    target_compile_definitions(CyberGirl PRIVATE HAVE_VULKAN=1)
+else()
+    target_compile_definitions(CyberGirl PRIVATE CPU_ONLY=1)
+endif()
+
 target_link_libraries(CyberGirl
-        PRIVATE ${Vulkan_LIBRARIES}
         PRIVATE ggml
         PRIVATE llama
         PRIVATE portaudio
@@ -91,9 +136,6 @@ target_link_libraries(CyberGirl
         PRIVATE OpenSSL::SSL OpenSSL::Crypto
         PRIVATE spdlog::spdlog
         PRIVATE CURL::libcurl
-        $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
-        $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
-        PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>
 )
 
 # 添加资源文件
